force-app/main/default/objects/Advice__c/Advice__c.object-meta.xml
<CustomObject>
    <label>Advice</label>
    <nameField>
        <label>Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>