force-app/main/default/objects/Advice__c/fields/Addendum_deck_link__c.field-meta.xml
<CustomField>
    <fullName>Addendum_deck_link__c</fullName>
    <label>Addendum deck link (s)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>