force-app/main/default/objects/Advice__c/fields/Additional_Questions_to_be_asked_on_call__c.field-meta.xml
<CustomField>
    <fullName>Additional_Questions_to_be_asked_on_call__c</fullName>
    <inlineHelpText>The planner should add any information that we still need to obtain from the client</inlineHelpText>
    <label>Outstanding information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>