force-app/main/default/objects/Advice__c/fields/Advice_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Advice_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is no longer used and should be deleted</description>
    <label>Advice cancelled</label>
    <type>Checkbox</type>
</CustomField>