force-app/main/default/objects/Advice__c/fields/Advice_Status__c.field-meta.xml
<CustomField>
    <fullName>Advice_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setup</fullName>
                <default>true</default>
                <label>Setup</label>
            </value>
            <value>
                <fullName>Data gathering</fullName>
            </value>
            <value>
                <fullName>Risk Call</fullName>
            </value>
            <value>
                <fullName>Ready for suitability</fullName>
            </value>
            <value>
                <fullName>Suitability in progress</fullName>
            </value>
            <value>
                <fullName>Prepare advice</fullName>
            </value>
            <value>
                <fullName>Present advice</fullName>
            </value>
            <value>
                <fullName>Deck complete</fullName>
            </value>
            <value>
                <fullName>Await decision</fullName>
            </value>
            <value>
                <fullName>Awaiting acceptance</fullName>
            </value>
            <value>
                <fullName>In fulfilment</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Suitability Declined</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Meeting held</fullName>
                <isActive>false</isActive>
                <label>Meeting held</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>