force-app/main/default/objects/Advice__c/fields/AdviceChecklist__c.field-meta.xml
<CustomField>
    <fullName>AdviceChecklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advice Checklist</label>
    <referenceTo>AdviceChecklist__c</referenceTo>
    <relationshipLabel>Advice</relationshipLabel>
    <relationshipName>Advice</relationshipName>
    <type>Lookup</type>
</CustomField>