force-app/main/default/objects/Advice__c/fields/AdviceDeckCompleteDate__c.field-meta.xml
<CustomField>
    <fullName>AdviceDeckCompleteDate__c</fullName>
    <description>This is the date the advice was finalised by the suitability planner. This is the date from which 3 have 3 months to present the advice, else it will expire.</description>
    <label>Advice deck complete date</label>
    <type>Date</type>
</CustomField>