force-app/main/default/objects/Advice__c/fields/AdviceDeckExpiry__c.field-meta.xml
<CustomField>
    <fullName>AdviceDeckExpiry__c</fullName>
    <description>The date on which the advice deck expires.</description>
    <label>Advice deck expiry</label>
    <type>Date</type>
</CustomField>