force-app/main/default/objects/Advice__c/fields/AdviceDeckUrl__c.field-meta.xml
<CustomField>
    <fullName>AdviceDeckUrl__c</fullName>
    <description>This field will contain the URL of the advice deck if there is one.</description>
    <label>Advice deck URL</label>
    <type>Url</type>
</CustomField>