force-app/main/default/objects/Advice__c/fields/AdviceExpiry__c.field-meta.xml
<CustomField>
    <fullName>AdviceExpiry__c</fullName>
    <description>The date the recommendations on the advice expire and after which they cannot be accepted.</description>
    <label>Advice expiry</label>
    <type>Date</type>
</CustomField>