force-app/main/default/objects/Advice__c/fields/AdviceLink__c.field-meta.xml
<CustomField>
    <fullName>AdviceLink__c</fullName>
    <description>A clickable link to the advice</description>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) + &quot;/lightning/r/Advice__c/&quot; +  Id  + &quot;/view&quot;,  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advice link</label>
    <type>Text</type>
</CustomField>