force-app/main/default/objects/Advice__c/fields/AdvicePresented__c.field-meta.xml
<CustomField>
    <fullName>AdvicePresented__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick box is checked in before save flow when advice has been presented to client.</description>
    <label>Advice Presented</label>
    <type>Checkbox</type>
</CustomField>