force-app/main/default/objects/Advice__c/fields/AdviceType__c.field-meta.xml
<CustomField>
    <fullName>AdviceType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A reference to advice type where variables are held that control business logic of the advice record.</description>
    <label>Advice type</label>
    <referenceTo>AdviceType__c</referenceTo>
    <relationshipLabel>Advice</relationshipLabel>
    <relationshipName>Advice</relationshipName>
    <type>Lookup</type>
</CustomField>