force-app/main/default/objects/Advice__c/fields/AIM_ISA__c.field-meta.xml
<CustomField>
    <fullName>AIM_ISA__c</fullName>
    <description>Number of recommendations in this advice</description>
    <label>AIM ISA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>