force-app/main/default/objects/Advice__c/fields/AIM_non_ISA_RAG__c.field-meta.xml
<CustomField>
    <fullName>AIM_non_ISA_RAG__c</fullName>
    <label>AIM (non-ISA) RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_RAG_Ratings</valueSetName>
    </valueSet>
</CustomField>