force-app/main/default/objects/Advice__c/fields/AllLoaInfoReceivedTimestamp__c.field-meta.xml
<CustomField>
    <fullName>AllLoaInfoReceivedTimestamp__c</fullName>
    <label>All LOA info received timestamp</label>
    <type>DateTime</type>
</CustomField>