force-app/main/default/objects/Advice__c/fields/Annual_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Allowance__c</fullName>
    <description>Number of recommendations in this advice</description>
    <inlineHelpText>(incl. taper/carry forward)</inlineHelpText>
    <label>Annual allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>