force-app/main/default/objects/Advice__c/fields/Annual_Allowance_RAG__c.field-meta.xml
<CustomField>
    <fullName>Annual_Allowance_RAG__c</fullName>
    <label>Annual allowance RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_RAG_Ratings</valueSetName>
    </valueSet>
</CustomField>