force-app/main/default/objects/Advice__c/fields/AnnualReviewDeckUrl__c.field-meta.xml
<CustomField>
    <fullName>AnnualReviewDeckUrl__c</fullName>
    <description>Store the final annual review deck to present to client.</description>
    <inlineHelpText>Stores the automatically generated URL to annual review pre-read decks.</inlineHelpText>
    <label>Annual review deck URL</label>
    <type>Url</type>
</CustomField>