force-app/main/default/objects/Advice__c/fields/Assigned_planner__c.field-meta.xml
<CustomField>
    <fullName>Assigned_planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suitability planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_planner</relationshipName>
    <type>Lookup</type>
</CustomField>