force-app/main/default/objects/Advice__c/fields/Audited_by__c.field-meta.xml
<CustomField>
    <fullName>Audited_by__c</fullName>
    <label>Audited by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>