force-app/main/default/objects/Advice__c/fields/Blocker__c.field-meta.xml
<CustomField>
    <fullName>Blocker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the current blocker</description>
    <label>Blocker</label>
    <referenceTo>Blockers__c</referenceTo>
    <relationshipLabel>Advice</relationshipLabel>
    <relationshipName>Advice</relationshipName>
    <type>Lookup</type>
</CustomField>