force-app/main/default/objects/Advice__c/fields/ChecklistType__c.field-meta.xml
<CustomField>
    <fullName>ChecklistType__c</fullName>
    <description>Calculates where the advice checklist is held based on whether we have a Salesforce checklist, a link to a Process Street one, or nothing.</description>
    <formula>IF(NOT(ISBLANK(AdviceChecklist__c)), &quot;SALESFORCE&quot;, IF(NOT(ISBLANK(Suitability_checklist__c)), &quot;PROCESS_STREET&quot;, &quot;NONE&quot;))</formula>
    <label>Checklist type</label>
    <type>Text</type>
</CustomField>