force-app/main/default/objects/Advice__c/fields/Choice_non_ISA__c.field-meta.xml
<CustomField>
    <fullName>Choice_non_ISA__c</fullName>
    <description>Number of Recommendations</description>
    <label>Choice (non-ISA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>