force-app/main/default/objects/Advice__c/fields/Choice_non_ISA_RAG__c.field-meta.xml
<CustomField>
    <fullName>Choice_non_ISA_RAG__c</fullName>
    <label>Choice (non-ISA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_RAG_Ratings</valueSetName>
    </valueSet>
</CustomField>