force-app/main/default/objects/Advice__c/fields/Clear_presentation_of_firm_recommendat__c.field-meta.xml
<CustomField>
    <fullName>Clear_presentation_of_firm_recommendat__c</fullName>
    <inlineHelpText>Clear presentation of &#39;firm&#39; recommendations &amp; &#39;our&#39; advice</inlineHelpText>
    <label>Clear presentation of &#39;firm&#39; recommendat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_RAG_Ratings</valueSetName>
    </valueSet>
</CustomField>