force-app/main/default/objects/Advice__c/fields/Client_offered_opportunity_to_ask_questi__c.field-meta.xml
<CustomField>
    <fullName>Client_offered_opportunity_to_ask_questi__c</fullName>
    <inlineHelpText>Client offered opportunity to ask questions</inlineHelpText>
    <label>Client offered opportunity to ask questi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_RAG_Ratings</valueSetName>
    </valueSet>
</CustomField>