force-app/main/default/objects/Advice__c/fields/ClientVulnerabilityUpdated__c.field-meta.xml
<CustomField>
    <fullName>ClientVulnerabilityUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox checked when vulnerability flow is completed on advice</description>
    <label>Client vulnerability updated</label>
    <type>Checkbox</type>
</CustomField>