force-app/main/default/objects/Advice__c/fields/ClosedReason__c.field-meta.xml
<CustomField>
    <fullName>ClosedReason__c</fullName>
    <description>Business use: used to capture the reason why this piece of advice is being cancelled. This field will be required if the advice status is changed to closed. 
Tech use: Displayed through the Cancel Advice button, when updated to cancel onboarding, a cancel onboarding case is then created and kick starts the process.</description>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Advice</fullName>
            </value>
            <value>
                <fullName>No longer required</fullName>
            </value>
            <value>
                <fullName>Set Up In Error</fullName>
            </value>
            <value>
                <fullName>Customer offboarding</fullName>
            </value>
            <value>
                <fullName>Advice deck expired</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Active customer is offboarding</fullName>
                <isActive>false</isActive>
                <label>Active customer is offboarding</label>
            </value>
            <value>
                <fullName>Customer withdrawing</fullName>
                <isActive>false</isActive>
                <label>Customer withdrawing</label>
            </value>
            <value>
                <fullName>Setup in Error</fullName>
                <isActive>false</isActive>
                <label>Setup in Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>