force-app/main/default/objects/Advice__c/fields/ComplianceReviewRequested__c.field-meta.xml
<CustomField>
    <fullName>ComplianceReviewRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a Planner or Partner has requested this record be reviewed by the compliance consultants.</description>
    <label>Compliance review requested</label>
    <type>Checkbox</type>
</CustomField>