force-app/main/default/objects/Advice__c/fields/ComplianceReviewRequestedBy__c.field-meta.xml
<CustomField>
    <fullName>ComplianceReviewRequestedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance review requested by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advice2</relationshipName>
    <type>Lookup</type>
</CustomField>