force-app/main/default/objects/Advice__c/fields/ComplianceReviewRequestedDate__c.field-meta.xml
<CustomField>
    <fullName>ComplianceReviewRequestedDate__c</fullName>
    <description>The date a compliance review was requested</description>
    <label>Compliance review requested date</label>
    <type>DateTime</type>
</CustomField>