force-app/main/default/objects/Advice__c/fields/Counts_as_Review_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Counts_as_Review_Meeting__c</fullName>
    <label>Counts as review meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>