force-app/main/default/objects/Advice__c/fields/Data_Gathering_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Gathering_Complete_Date__c</fullName>
    <description>Date of data gathering complete</description>
    <label>Data gathering complete date</label>
    <type>Date</type>
</CustomField>