force-app/main/default/objects/Advice__c/fields/DataAnalysisSpecialist__c.field-meta.xml
<CustomField>
    <fullName>DataAnalysisSpecialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the dedicated specialist who completed the data analysis part of the advice process.</description>
    <label>Data analysis specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AdviceDataAnalysis</relationshipName>
    <type>Lookup</type>
</CustomField>