force-app/main/default/objects/Advice__c/fields/DataAnalysisStatus__c.field-meta.xml
<CustomField>
    <fullName>DataAnalysisStatus__c</fullName>
    <description>Indicates the progress of data analysis</description>
    <label>Data analysis status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>