force-app/main/default/objects/Advice__c/fields/DataGatheringSpecialist__c.field-meta.xml
<CustomField>
    <fullName>DataGatheringSpecialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the dedicated specialist who completed the data gathering part of the advice process.</description>
    <label>Data gathering specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AdviceDataGathering</relationshipName>
    <type>Lookup</type>
</CustomField>