force-app/main/default/objects/Advice__c/fields/DataGatheringStatus__c.field-meta.xml
<CustomField>
    <fullName>DataGatheringStatus__c</fullName>
    <description>Indicates the progress of the information gathering on products</description>
    <label>Data gathering status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not started</fullName>
                <isActive>false</isActive>
                <label>Not started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>