force-app/main/default/objects/Advice__c/fields/Date_Client_Confirmed_Understanding__c.field-meta.xml
<CustomField>
    <fullName>Date_Client_Confirmed_Understanding__c</fullName>
    <description>Date client confirmed understanding of the triage document</description>
    <label>Date client confirmed understanding</label>
    <type>Date</type>
</CustomField>