force-app/main/default/objects/Advice__c/fields/Date_sent_for_audit__c.field-meta.xml
<CustomField>
    <fullName>Date_sent_for_audit__c</fullName>
    <label>Date sent for audit</label>
    <type>Date</type>
</CustomField>