force-app/main/default/objects/Advice__c/fields/DateAccepted__c.field-meta.xml
<CustomField>
    <fullName>DateAccepted__c</fullName>
    <description>Shows earliest date of decision from all accepted related recommendations.</description>
    <label>Date accepted</label>
    <type>Date</type>
</CustomField>