force-app/main/default/objects/Advice__c/fields/Days_in_Data_Gathering__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Data_Gathering__c</fullName>
    <formula>Data_Gathering_Complete_Date__c -   Ready_for_Suitability_Complete_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Data Gathering</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>