force-app/main/default/objects/Advice__c/fields/Days_in_Setup__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Setup__c</fullName>
    <formula>Setup_Complete_Date__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Setup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>