force-app/main/default/objects/Advice__c/fields/DaysToAnalyseLoaInfo__c.field-meta.xml
<CustomField>
    <fullName>DaysToAnalyseLoaInfo__c</fullName>
    <description>Time between initial LOA info received and all LOAs complete</description>
    <formula>LoaAnalysisCompleteTimestamp__c -  FirstLoaInfoReceivedTimestamp__c</formula>
    <label>Days to analyse LOA info</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>