force-app/main/default/objects/Advice__c/fields/DB_Advice_Rejected__c.field-meta.xml
<CustomField>
    <fullName>DB_Advice_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suitability Declined</label>
    <type>Checkbox</type>
</CustomField>