force-app/main/default/objects/Advice__c/fields/Deck_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Deck_Complete_Date__c</fullName>
    <label>Deck complete date</label>
    <type>Date</type>
</CustomField>