force-app/main/default/objects/Advice__c/fields/Deck_Complete_Days__c.field-meta.xml
<CustomField>
    <fullName>Deck_Complete_Days__c</fullName>
    <formula>Deck_Complete_Date__c -  Suitability_In_Progress_Complete_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deck complete days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>