force-app/main/default/objects/Advice__c/fields/Deck_Review__c.field-meta.xml
<CustomField>
    <fullName>Deck_Review__c</fullName>
    <label>Deck review</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>