force-app/main/default/objects/Advice__c/fields/DeclinedReason__c.field-meta.xml
<CustomField>
    <fullName>DeclinedReason__c</fullName>
    <description>To record the structured reason advice has been declined</description>
    <label>Declined reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
            <value>
                <fullName>Advice lapsed</fullName>
            </value>
            <value>
                <fullName>Fees too high</fullName>
            </value>
            <value>
                <fullName>Self-managing finances</fullName>
            </value>
            <value>
                <fullName>Unsatisfied with service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Customer not eligible</fullName>
                <isActive>false</isActive>
                <label>Customer not eligible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>