force-app/main/default/objects/Advice__c/fields/DeclinedReasonNotes__c.field-meta.xml
<CustomField>
    <fullName>DeclinedReasonNotes__c</fullName>
    <description>Free text field to capture further notes to expand on the &#39;advice declined reason&#39; picklist field.</description>
    <label>Declined reason notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>