force-app/main/default/objects/Advice__c/fields/Delay_advice_until__c.field-meta.xml
<CustomField>
    <fullName>Delay_advice_until__c</fullName>
    <inlineHelpText>Delays advice until a specified date, at which a notification will be issued to asses if advice can now begin.</inlineHelpText>
    <label>zDel - Delay advice until</label>
    <type>Date</type>
</CustomField>