force-app/main/default/objects/Advice__c/fields/EIS__c.field-meta.xml
<CustomField>
    <fullName>EIS__c</fullName>
    <label>EIS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>