force-app/main/default/objects/Advice__c/fields/Equity_Release__c.field-meta.xml
<CustomField>
    <fullName>Equity_Release__c</fullName>
    <label>Equity release</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>