force-app/main/default/objects/Advice__c/fields/Escalate_any_queries_to_Planning_Hub_if__c.field-meta.xml
<CustomField>
    <fullName>Escalate_any_queries_to_Planning_Hub_if__c</fullName>
    <inlineHelpText>Escalate any queries to Planning Hub (if applicable)</inlineHelpText>
    <label>Escalate queries to planning hub</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_RAG_Ratings</valueSetName>
    </valueSet>
</CustomField>