force-app/main/default/objects/Advice__c/fields/ExcludedUpdateNotes__c.field-meta.xml
<CustomField>
    <fullName>ExcludedUpdateNotes__c</fullName>
    <description>Free text notes if the exclusion reason is not standard</description>
    <label>Excluded update notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>