force-app/main/default/objects/Advice__c/fields/ExcludedUpdateReason__c.field-meta.xml
<CustomField>
    <fullName>ExcludedUpdateReason__c</fullName>
    <description>Allows operations to indicate why this advice shouldn&apos;t be receiving updates</description>
    <label>Excluded update reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client no longer wants to receive updates</fullName>
            </value>
            <value>
                <fullName>Client circumstances</fullName>
            </value>
            <value>
                <fullName>Fulfilment is on hold</fullName>
            </value>
            <value>
                <fullName>Long term ongoing transfer</fullName>
            </value>
            <value>
                <fullName>Non-standard fulfilment only</fullName>
            </value>
            <value>
                <fullName>Withdrawals only</fullName>
            </value>
            <value>
                <fullName>Protection only</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>