force-app/main/default/objects/Advice__c/fields/Extra_Information_Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Extra_Information_Required_Date__c</fullName>
    <description>Client confirmed they need more information to fully understand the triage process</description>
    <label>Extra information required date</label>
    <type>Date</type>
</CustomField>