force-app/main/default/objects/Advice__c/fields/Follow_on_advice__c.field-meta.xml
<CustomField>
    <fullName>Follow_on_advice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select advice that is dependent on this piece of advice being completed first</inlineHelpText>
    <label>zDel - Follow on advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Follow on advice</relationshipLabel>
    <relationshipName>Follow_on_advice</relationshipName>
    <type>Lookup</type>
</CustomField>