force-app/main/default/objects/Advice__c/fields/Fulfilment_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Complete_Date__c</fullName>
    <label>Fulfilment Complete Date</label>
    <type>Date</type>
</CustomField>