force-app/main/default/objects/Advice__c/fields/Fulfilment_Days__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Days__c</fullName>
    <formula>Fulfilment_Complete_Date__c -  Meeting_Held_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfilment days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>