force-app/main/default/objects/Advice__c/fields/FulfilmentUpdateStatus__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentUpdateStatus__c</fullName>
    <description>Indicates whether this advice is receiving fulfilment updates</description>
    <label>Fulfilment update status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receiving updates</fullName>
            </value>
            <value>
                <fullName>Temporary pause on updates</fullName>
            </value>
            <value>
                <fullName>Never receiving updates</fullName>
            </value>
            <value>
                <fullName>Not receiving updates</fullName>
            </value>
            <value>
                <fullName>Final update sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>