force-app/main/default/objects/Advice__c/fields/Full_Fact_Find__c.field-meta.xml
<CustomField>
    <fullName>Full_Fact_Find__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Full fact find</label>
    <referenceTo>Fact_Find__c</referenceTo>
    <relationshipLabel>Advice</relationshipLabel>
    <relationshipName>Advice</relationshipName>
    <type>Lookup</type>
</CustomField>