force-app/main/default/objects/Advice__c/fields/Full_Fact_Find_Client_Link__c.field-meta.xml
<CustomField>
    <fullName>Full_Fact_Find_Client_Link__c</fullName>
    <label>Full Fact Find Client Link</label>
    <type>Url</type>
</CustomField>