force-app/main/default/objects/Advice__c/fields/Full_Fact_Find_Created__c.field-meta.xml
<CustomField>
    <fullName>Full_Fact_Find_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the fact find has been created. If you uncheck this box it will create another fact find.</inlineHelpText>
    <label>Full Fact Find Created</label>
    <type>Checkbox</type>
</CustomField>