force-app/main/default/objects/Advice__c/fields/Full_Fact_Find_Status__c.field-meta.xml
<CustomField>
    <fullName>Full_Fact_Find_Status__c</fullName>
    <label>Full Fact Find Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fact_Find_Status</valueSetName>
    </valueSet>
</CustomField>