force-app/main/default/objects/Advice__c/fields/G_Drive_Advice_Folder__c.field-meta.xml
<CustomField>
    <fullName>G_Drive_Advice_Folder__c</fullName>
    <label>Google Drive advice folder</label>
    <type>Url</type>
</CustomField>