force-app/main/default/objects/Advice__c/fields/GoogleDriveFolderId__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolderId__c</fullName>
    <description>To store the Google Drive folder ID for the advice.</description>
    <label>Google Drive folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>