force-app/main/default/objects/Advice__c/fields/Information_obtained_on_call__c.field-meta.xml
<CustomField>
    <fullName>Information_obtained_on_call__c</fullName>
    <label>Information obtained on call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>