force-app/main/default/objects/Advice__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate if advice is now closed. Checkbox is checked via Advice before save flow if status is now Closed, Cancelled or suitability declined.</description>
    <label>Is closed</label>
    <type>Checkbox</type>
</CustomField>