force-app/main/default/objects/Advice__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <inlineHelpText>In your own words, how would you describe your knowledge of investing?</inlineHelpText>
    <label>Knowledge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>