force-app/main/default/objects/Advice__c/fields/Last_Client_Action__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_Action__c</fullName>
    <inlineHelpText>The last time the client updated the Full fact find</inlineHelpText>
    <label>Last client action</label>
    <type>DateTime</type>
</CustomField>